--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -17,6 +17,11 @@
                 <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
             </div>
         </div>
+        <br>
+        <!-- 목록  출력 영역-->
+        <table>
+            <thead></thead>
+        </table>
     </div>
 {{>layout/footer}}
 </body>
