--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -19,10 +19,28 @@
         </div>
         <br>
         <!-- 목록  출력 영역-->
-        <table>
-            <thead></thead>
+        <table class="table table-horizontal table-bordered">
+            <thead class="thread-strong">
+                <tr>
+                    <th>게시글번호</th>
+                    <th>제목</th>
+                    <th>작성자</th>
+                    <th>최종수정일</th>
+                </tr>
+            </thead>
+            <tbody id="tbody">
+            {{#posts}}
+                <tr>
+                    <td>{{id}}</td>
+                    <td><a href="/posts/update/{{id}}">{{title}}</a></td>
+                    <td>{{author}}</td>
+                    <td>{{modifiedDate}}</td>
+                </tr>
+            {{/posts}}
+            </tbody>
         </table>
     </div>
+
 {{>layout/footer}}
 </body>
 </html>
