--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -6,15 +6,20 @@
 </head>
 <body>
 {{>layout/header}}
-    <h1>스프링 부트로 시작하는 웹 서비스</h1>
-{{>layout/footer}}
-
-{{>layout/header}}
-    <h1>스프링 부트로 시작하는 웹 서비스 Ver.2</h1>
+    <h1>스프링 부트로 시작하는 웹 서비스 <!--Ver.2--></h1>
     <div class="col-md-12">
+        <!-- 로그인 기능 영역 -->
+        <!-- 머스테치는 if(userName!=null)등 제공하지 않음. true/false 여부만 판단 즉, 최종값을 넘겨줘야함 -->
         <div class="row">
             <div class="col-md-6">
                 <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+                {{#userName}}
+                Logged in as: <span id="user">{{userName}}</span>
+                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                {{/userName}}
+                {{^userName}}<!--userName이 존재하지 않는 경우 ^를 사용-->
+                    <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+                {{/userName}}
             </div>
         </div>
         <br>
