--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -19,6 +19,8 @@
                 {{/userName}}
                 {{^userName}}<!--userName이 존재하지 않는 경우 ^를 사용-->
                     <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+
+                    <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
                 {{/userName}}
             </div>
         </div>
